DIS-233 Added BE part of the Search-Bar component