@@ -5,6 +5,7 @@ import com.positive.dhl.core.services.AssetUtilService;
 import io.wcm.testing.mock.aem.junit5.AemContext;
 import org.apache.sling.models.spi.Injector;
 
+import java.util.Collections;
 import java.util.Map;
 
 import static org.mockito.ArgumentMatchers.*;
@@ -61,7 +62,7 @@ public class InjectorMock {
     }
 
     public static void mockInject(AemContext context, String injectorName, String name, Object value) {
-        mockInject(context, injectorName, Map.of(name, value));
+        mockInject(context, injectorName, Collections.singletonMap(name, value));
     }
 
     public static void mockInject(AemContext context, Map<String, Object> map) {
